# r6-server-switcher

./: .gitignore  MainPage.xaml.cs  README.md  app.go  build.ps1  go.mod  main.go  main.py  pyproject.toml  r6-server-switcher.slnx  todo_list.md  wails.json
frontend/: index.html
frontend/src/: main.js  style.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
r6-server-switcher/: App.xaml  App.xaml.cs  MainPage.xaml  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SettingsPage.xaml  SettingsPage.xaml.cs  app.manifest  r6-server-switcher.csproj
r6-server-switcher/Properties/: launchSettings.json
ui/: app-window.slint
